--- a/data/projects/splicing.mdx
+++ b/data/projects/splicing.mdx
@@ -7,7 +7,8 @@ coverImage: '/static/images/projects/splicing.jpg'
 git: 'https://github.com/lightning/bolts/pull/863'
 twitter: 'dusty_daemon'
 personalTwitter: 'dusty_daemon'
-type: 'Other Free and Open-Source Project'
+btcpay: 'dusty'
+dateAdded: '2023-01-01'
 zaprite: '2qB3Y3gfSvOnWOv23BZb'
 ---
 
