--- a/data/projects/splicing.mdx
+++ b/data/projects/splicing.mdx
@@ -7,9 +7,10 @@ coverImage: '/static/images/projects/splicing.jpg'
 git: 'https://github.com/lightning/bolts/pull/863'
 twitter: 'dusty_daemon'
 personalTwitter: 'dusty_daemon'
-btcpay: 'dusty'
 dateAdded: '2023-03-10'
+btcpay: 'dusty'
 zaprite: '2qB3Y3gfSvOnWOv23BZb'
+tags: ['Lightning', 'Protocol']
 ---
 
 ## About this project
