Add link to board of directors

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -27,6 +27,7 @@ tempor volutpat mi. Donec tempor egestas placerat.
 
 - [Our Mission](/mission)
 - [Executed By-Laws](/docs/bylaws.pdf)
+- [Board of Directors](/about#board-of-directors)
 
 ## Grants & Research
 
