--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -5,45 +5,52 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['jamesob']
 images: ['/static/images/blog/02-lts.jpg']
-summary: "OpenSats welcomes Josiah Baker as an LTS Grantee"
+summary: "OpenSats Welcomes Josiah Baker as an LTS Grantee"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean placerat
-pharetra ante, sit amet auctor massa blandit pulvinar. Aliquam condimentum
-ligula sit amet ligula tristique ornare. Suspendisse vel vestibulum elit. Nunc
-mauris nibh, blandit ut ligula ut, ultricies fringilla mauris. Vivamus vehicula
-sollicitudin neque ac fermentum. Donec id erat dolor. Donec bibendum mi non
-tincidunt auctor. Etiam non odio pharetra, faucibus lectus quis, malesuada nunc.
-Fusce ut sodales justo.
+We're delighted to announce [Josi Baker](https://github.com/josibake) as our
+newest LTS grantee.
 
-Donec a tempus sapien. Praesent dapibus luctus commodo. Donec sagittis
-scelerisque felis, in vestibulum nunc. Sed id mauris id dolor consequat cursus
-non nec tellus. Morbi condimentum ex id massa varius iaculis. Duis non facilisis
-eros. Quisque urna elit, pulvinar blandit efficitur at, porttitor ut dolor. Nunc
-diam arcu, rhoncus nec nibh cursus, sagittis venenatis ipsum. Integer ac nisl
-posuere, hendrerit nisl eget, pretium ipsum. Integer eget felis sodales arcu
-auctor hendrerit eu vitae ex. Aliquam erat volutpat. Integer blandit sem eu
-tellus molestie, at varius nulla convallis. Aenean porttitor, augue vel volutpat
-tempor, odio enim maximus lectus, in fringilla elit diam hendrerit eros.
-Praesent eros nisi, euismod et ex eget, pharetra suscipit purus. Phasellus sit
-amet nunc quis diam egestas bibendum ut posuere lectus.
+Josi will receive long-term support from OpenSats for his continued work on
+Bitcoin Core. His work will consist of pull-request reviews,[^fn-reviews]
+supporting major release cycles, and his own contributions.[^fn-prs]
 
-Sed id tellus pharetra dui eleifend pellentesque. Mauris ligula elit, dignissim
-sit amet sagittis id, laoreet sit amet ipsum. Donec justo turpis, euismod ut
-aliquet sit amet, euismod sed ligula. In convallis lobortis semper. Donec
-pretium tortor et velit viverra, quis scelerisque elit ultrices. Praesent eget
-mauris eget ex consequat laoreet. Mauris semper, dolor quis tincidunt
-pellentesque, lacus diam commodo ante, in cursus libero leo pharetra mauris.
-Cras luctus finibus mauris, ut convallis arcu hendrerit quis.
+[^fn-reviews]: https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+reviewed-by%3Ajosibake
+[^fn-prs]: https://github.com/bitcoin/bitcoin/pulls/josibake
 
-Nulla accumsan a felis quis dictum. Cras sit amet dolor in purus hendrerit
-placerat. Pellentesque vel neque quis quam varius fringilla. Donec fermentum
-malesuada hendrerit. Donec sed tincidunt mi, id faucibus risus. Pellentesque
-ultricies convallis consequat. Sed sollicitudin elit elit, accumsan dignissim
-magna auctor finibus. In pellentesque enim nec nisl volutpat posuere. Fusce eu
-porttitor nisi. Sed tristique at erat euismod viverra. Orci varius natoque
-penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut consequat
-urna sed ex commodo viverra. Aliquam semper felis in odio fringilla
-pellentesque. Mauris et diam feugiat, ultricies ex in, congue libero. Nullam vel
-felis tortor. Cras consequat lorem sit amet metus bibendum, id lacinia turpis
-scelerisque.
+In the next couple of months, Josi plans to work on the [libbitcoinkernel
+project](https://github.com/bitcoin/bitcoin/issues/27587) as a reviewer, tester,
+and contributor. The `libbitcoinkernel` project is an attempt at modularizing
+the Bitcoin codebase and extracting consensus logic into something other
+applications can reuse. This has a number of benefits, namely improved testing
+and code separation of consensus code within Bitcoin Core and enabling
+application-specific programs to be written outside of the Bitcoin Core project
+with increased confidence these applications will be in consensus.
+
+In addition to his work on Bitcoin Core, he will continue to work on [BIP-352:
+Silent Payments](https://github.com/bitcoin/bips/pull/1458), focusing on
+adoption in wallets outside of Bitcoin Core and supporting mobile clients.
+
+Silent Payments are a privacy and UX improvement for Bitcoin wallets that allows
+static, reusable payment codes without address reuse. The key improvements over
+existing reusable payment code solutions are improved privacy for the sender and
+receiver due to eliminating the need for a notification transaction and no
+additional cost for senders. The proposal also separates sending and receiving,
+which enables broader adoption. These improvements are particularly relevant for
+activists wishing to use Bitcoin as a means of raising funds in a private and
+censorship-resistant way.
+
+The mission of OpenSats is to support and maintain a sustainable ecosystem of
+funding for free and open-source projects and contributors, especially
+Bitcoin-related projects and projects that help Bitcoin flourish. Regular
+contributors reviewing and maintaining Bitcoin Core are critical to the
+project's continued success. Sustainable funding allows contributors to build
+expertise over multiple years, which is why we introduced the [OpenSats LTS
+program](https://opensats.org/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors).
+
+You can apply for the program here:
+[https://opensats.org/apply/lts](https://opensats.org/apply/lts)
+
+Support for Josi's work is sourced from our General Fund and made possible by
+generous donors like you. If you would like to support work like Josi's,
+consider [donating to the fund](https://opensats.org/projects/general_fund).
