Add link text to footnote URLs

--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -15,8 +15,8 @@ Josi will receive long-term support from OpenSats for his continued work on
 Bitcoin Core. His work will consist of pull-request reviews,[^fn-reviews]
 supporting major release cycles, and his own contributions.[^fn-prs]
 
-[^fn-reviews]: https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+reviewed-by%3Ajosibake
-[^fn-prs]: https://github.com/bitcoin/bitcoin/pulls/josibake
+[^fn-reviews]: [PR reviews by @josibake](https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+reviewed-by%3Ajosibake)
+[^fn-prs]: [PRs by @josibake](https://github.com/bitcoin/bitcoin/pulls/josibake)
 
 In the next couple of months, Josi plans to work on the [libbitcoinkernel
 project](https://github.com/bitcoin/bitcoin/issues/27587) as a reviewer, tester,
