Fix njump formatting issue

--- a/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
+++ b/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
@@ -138,7 +138,7 @@ and Coracle, emphasizing the onboarding process as well as usability and
 accessibility. One part of onboarding is solving the discoverability problem
 that nostr has in the first place. Solving the problem of jumping in and out of
 the nostr world is what motivated the development of
-`[njump](https://github.com/fiatjaf/njump)`, which was redesigned as part of
+[`njump`](https://github.com/fiatjaf/njump), which was redesigned as part of
 these efforts and is now live at
 [nostr.com](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
 
