Format /apply link as bullet point

--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -49,7 +49,8 @@ expertise over multiple years, which is why we introduced the [OpenSats LTS
 program](https://opensats.org/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors).
 
 You can apply for the program here:
-[https://opensats.org/apply/lts](https://opensats.org/apply/lts)
+
+- [opensats.org/apply/lts](https://opensats.org/apply/lts)
 
 Support for Josi's work is sourced from our General Fund and made possible by
 generous donors like you. If you would like to support work like Josi's,
