Add closing period to summary

--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['jamesob']
 images: ['/static/images/blog/05-josi.jpg']
-summary: "OpenSats Welcomes Josiah Baker as an LTS Grantee"
+summary: "OpenSats Welcomes Josiah Baker as an LTS Grantee."
 ---
 
 We're delighted to announce [Josi Baker](https://github.com/josibake) as our
