Minor grammar fixes

--- a/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
+++ b/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'nostr']
 draft: false
 authors: ['odell']
 images: ['/static/images/blog/03-nostr.jpg']
-summary: "OpenSats is giving grants to 8 open-source projects in the bitcoin and nostr ecosystem."
+summary: "OpenSats is providing grants to 8 additional open-source projects in the bitcoin and nostr ecosystem."
 ---
 
 After announcing our first wave of grants for bitcoin and nostr projects, we are
@@ -22,8 +22,8 @@ space:
 - [Nostr Use-Case Exploration \& Education](#nostr-use-case-exploration--education)
 
 The first five grants are sourced from our [General Fund][bitcoin-fund], the
-last 3—being nostr projects—from our [Nostr Fund][nostr-fund]. This brings the
-total number of OpenSats grants to 41, adding to the bitcoin and nostr grants
+last three—being nostr projects—from our [Nostr Fund][nostr-fund]. This brings
+the total number of OpenSats grants to 41, adding to the grants we previously
 announced in July.
 
 Once again, let's take a closer look at each of the projects to see how they
