Add links to prior announcements in footnotes

--- a/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
+++ b/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
@@ -8,9 +8,12 @@ images: ['/static/images/blog/03-nostr.jpg']
 summary: "OpenSats is providing grants to 8 additional open-source projects in the bitcoin and nostr ecosystem."
 ---
 
-After announcing our first wave of grants for bitcoin and nostr projects, we are
+After announcing our first wave of grants for bitcoin[^fn-btc] and nostr[^fn-nostr] projects, we are
 pleased to announce an additional wave of grants for open-source projects in the
 space:
+
+[^fn-btc]: [First Wave of Bitcoin Grants](https://opensats.org/blog/bitcoin-grants-july-2023)
+[^fn-nostr]: [First Wave of Nostr Grants](https://opensats.org/blog/nostr-grants-july-2023)
 
 - [BDK](#bdk)
 - [LNbits](#lnbits)
