--- a/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
+++ b/data/blog/bitcoin-and-nostr-grants-august-2023.mdx
@@ -1,5 +1,5 @@
 ---
-title: "TODO"
+title: "Grants for BDK, LNbits, Nostr, and More!"
 date: '2023-08-18'
 tags: ['OpenSats', 'grants', 'bitcoin', 'nostr']
 draft: false
