Fix `btcpay_id` of General Fund

--- a/data/projects/general_fund.mdx
+++ b/data/projects/general_fund.mdx
@@ -9,7 +9,7 @@ git: 'opensats'
 twitter: 'opensats'
 hidden: false
 bonusUSD: 4670000
-btcpay: 'dusty'
+btcpay: 'general_fund'
 zaprite: '32WbND8heqmY5wYYnIpa'
 tags: ['OpenSats', 'Fund']
 ---
