--- a/data/projects/bdk.mdx
+++ b/data/projects/bdk.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Bitcoin Dev Kit'
+dateAdded: '2022-12-29'
 summary: 'The goal of the Bitcoin Dev Kit (BDK) project (originally called Magical Bitcoin 🧙) is to provide libraries and tools that make it 10x easier to build secure, full featured, cross-platform on-chain Bitcoin wallets. All BDK components are designed to be lightweight and modular so that they can be adapted for virtually any use-case: from single-sig mobile wallets to multi-billion-dollar cold storage vaults.'
 nym: 'Alekos Filini'
 website: 'https://bitcoindevkit.org/'
@@ -8,6 +9,8 @@ git: 'https://github.com/bitcoindevkit'
 twitter: 'bitcoindevkit'
 type: 'Other Free and Open-Source Project'
 zaprite: 'vmwW1gJFaZ2os0AADI48'
+btcpay: 'bdk'
+tags: ['Bitcoin', 'Library']
 ---
 
 ## About this project
