--- a/data/projects/opensats_operations_budget.mdx
+++ b/data/projects/opensats_operations_budget.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Operations Budget'
+dateAdded: '2022-12-05'
 summary: 'Contributions to the OpenSats Operations Budget will be used to cover our operating expenses as we continue to facilitate frictionless, tax-deductible donations from the community to the Bitcoin & FOSS ecosystems at a pass-through rate of 100%.'
 coverImage: '/static/images/projects/opensats_operations.png'
 nym: 'OpenSats'
@@ -7,8 +8,10 @@ twitter: 'opensats'
 website: 'https://opensats.org/'
 git: 'https://github.com/OpenSats'
 type: 'Internal Operations'
-zaprite: 'lZo1wcsJ0SQb58XfGC4e'
 bonusUSD: 330000
+btcpay: 'opensats_operations_budget'
+zaprite: 'lZo1wcsJ0SQb58XfGC4e'
+tags: ['OpenSats', 'Fund']
 ---
 
 ## About this project
