--- a/data/projects/nostr.mdx
+++ b/data/projects/nostr.mdx
@@ -1,13 +1,16 @@
 ---
 title: 'The Nostr Fund'
+dateAdded: '2023-05-13'
 summary: 'Funding nostr protocol development and other stuff.'
 nym: 'OpenSats'
 website: 'https://opensats.org'
 coverImage: '/static/images/projects/nostr.png'
 git: 'opensats'
 twitter: 'opensats'
-zaprite: 'OoYtzNjilW1NRtDsxLAj'
 bonusUSD: 5000000
+btcpay: 'zeus'
+zaprite: 'OoYtzNjilW1NRtDsxLAj'
+tags: ['OpenSats', 'Fund']
 ---
 
 The Nostr General Fund is a way for you to support the development and
