--- a/data/projects/nostr.mdx
+++ b/data/projects/nostr.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/nostr.png'
 git: 'opensats'
 twitter: 'opensats'
 bonusUSD: 5000000
-btcpay: 'zeus'
+btcpay: 'nostr'
 zaprite: 'OoYtzNjilW1NRtDsxLAj'
 tags: ['OpenSats', 'Fund']
 ---
