Add `btcpay` param and `tags`
Fixes #102

--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/GrapheneOS'
 twitter: 'GrapheneOS'
 zaprite: 'F81LWN96IGmFHnvydSli'
 bonusUSD: 1000000
+btcpay: 'grapheneos'
+tags: ['Bitcoin', 'Lightning', 'ecash']
 ---
 
 ## About this project
