--- a/data/projects/rgb.mdx
+++ b/data/projects/rgb.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/rgb-WG/'
 twitter: 'lnp_bp'
 personalTwitter: 'lnp_bp'
 zaprite: 'eWjJu03VZaAgizLPZJEb'
+btcpay: 'rgb'
+tags: ['Bitcoin', 'Lightning', 'Protocol']
 ---
 
 ## About this project
