--- a/data/projects/ronin_dojo.mdx
+++ b/data/projects/ronin_dojo.mdx
@@ -8,6 +8,8 @@ git: 'https://code.samourai.io/ronindojo/RoninDojo/'
 twitter: 'RoninDojoUI'
 personalTwitter: 'BTCxZelko'
 zaprite: 'XuBIEZbPTA9vqClJvDZe'
+btcpay: 'ronin_dojo'
+tags: ['Bitcoin', 'Privacy']
 ---
 
 ## About this project
