--- a/data/projects/sapio.mdx
+++ b/data/projects/sapio.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/sapio-lang/sapio'
 twitter: 'jeremyrubin'
 personalTwitter: 'JeremyRubin'
 zaprite: 'P9j4XyrCOFAgCXkHHV5s'
+btcpay: 'sapio'
+tags: ['Bitcoin']
 ---
 
 ## About this project
