--- a/data/projects/seedsigner.mdx
+++ b/data/projects/seedsigner.mdx
@@ -7,6 +7,8 @@ coverImage: '/static/images/projects/seedsigner.jpeg'
 git: 'https://github.com/SeedSigner'
 twitter: 'seedsigner'
 zaprite: 'QS8XutI6IdVTnjuYv2GH'
+btcpay: 'seedsigner'
+tags: ['Bitcoin', 'HWW', 'Signing Device']
 ---
 
 ## About this project
