--- a/data/projects/sparrow_wallet.mdx
+++ b/data/projects/sparrow_wallet.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/sparrowwallet/sparrow'
 twitter: 'SparrowWallet'
 personalTwitter: 'craigraw'
 zaprite: 'WVaur0QAG3nLmI9y6On7'
+btcpay: 'sparrow_wallet'
+tags: ['Bitcoin', 'Wallet']
 ---
 
 ## About this project
