--- a/data/projects/thunderhub.mdx
+++ b/data/projects/thunderhub.mdx
@@ -8,6 +8,8 @@ git: https://github.com/apotdevin/thunderhub
 twitter: 'thunderhubio'
 personalTwitter: 'tonyioi'
 zaprite: 'Mnt294LwYGFuWEhYbwVZ'
+btcpay: 'thunderhub'
+tags: ['Bitcoin', 'Lightning', 'Node']
 ---
 
 ## About this project
