--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -7,6 +7,8 @@ coverImage: '/static/images/projects/tor.svg'
 git: 'https://gitweb.torproject.org/'
 twitter: 'torproject'
 zaprite: 'ZM5TmZ025mrJI8E1kFS5'
+btcpay: 'ronin_dojo'
+tags: ['Privacy', 'Protocol']
 ---
 
 ## About this project
