--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/btcpayserver/btcpayserver'
 twitter: 'BtcpayServer'
 personalTwitter: 'NicolasDorier'
 zaprite: 'of0LLGHM5cAGu4seVNNN'
+btcpay: 'btcpayserver'
+tags: ['Bitcoin', 'Lightning', 'Wallet', 'Node', 'Commerce', 'Infrastructure']
 ---
 
 ## About this project
