--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -7,8 +7,9 @@ website: 'https://cashu.space/'
 coverImage: '/static/images/projects/cashu.jpeg'
 git: 'https://github.com/cashubtc'
 twitter: 'CashuBTC'
-btcpay: 'cashu'
 zaprite: '4GbA2gJpvuIM5IPuxTdr'
+btcpay: 'btcpayserver'
+tags: ['Bitcoin', 'Lightning', 'ecash']
 ---
 
 ## About this project
