--- a/data/projects/stratumv2.mdx
+++ b/data/projects/stratumv2.mdx
@@ -8,6 +8,8 @@ git: 'https://github.com/stratum-mining/stratum'
 twitter: 'StratumV2'
 personalTwitter: 'StratumV2'
 zaprite: 'G9QKE1Dn6B56uOF8PSYX'
+btcpay: 'stratumv2'
+tags: ['Bitcoin', 'Privacy', 'Protocol', 'Mining']
 ---
 
 ## About this project
