--- a/data/projects/summerofbitcoin.mdx
+++ b/data/projects/summerofbitcoin.mdx
@@ -7,6 +7,8 @@ coverImage: '/static/images/projects/summerofbitcoin.jpeg'
 git: 'https://github.com/adi-shankara'
 twitter: 'summerofbitcoin'
 zaprite: 'pIwCyBwAmvtt0di7T8yD'
+btcpay: 'summerofbitcoin'
+tags: ['Bitcoin', 'Education']
 ---
 
 ## About this project
