Add `dateAdded` to frontmatter

--- a/data/projects/bitcoiner_guide.mdx
+++ b/data/projects/bitcoiner_guide.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Bitcoiner.guide'
+dateAdded: '2022-03-26'
 summary: 'Bitcoiner.Guide is a collection of resources by BitcoinQnA to help people feel more comfortable interacting with bitcoin in a sovereign way.'
 nym: 'Bitcoin QnA'
 website: 'https://bitcoiner.guide/'
