--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'BTCPay Server'
+dateAdded: '2022-09-22'
 summary: 'Free, open-source & self-hosted bitcoin payment gateway that allows self-sovereign individuals and businesses to accept bitcoin payments online or in person without any fees.'
 nym: 'BTCPay Server Foundation'
 website: 'https://btcpayserver.org/'
