--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'GrapheneOS'
+dateAdded: '2022-12-24'
 summary: 'GrapheneOS is a private and secure mobile operating system with great functionality and usability. It has near full Android app compatibility via our sandboxed Google Play compatibility layer.'
 nym: 'GrapheneOS Foundation'
 website: 'https://grapheneos.org/'
