--- a/data/projects/ronin_dojo.mdx
+++ b/data/projects/ronin_dojo.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'RoninDojo'
+dateAdded: '2022-04-02'
 summary: 'We help people have a feature rich bitcoin experience, maintain privacy, and thrive as a sovereign individual.'
 nym: 'BTCxZelko'
 website: 'https://ronindojo.io/'
