--- a/data/projects/stratumv2.mdx
+++ b/data/projects/stratumv2.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Stratum V2'
+dateAdded: '2023-03-16'
 summary: 'An independent, community run, 100% free and open-source reference implementation of the Stratum V2 protocol.'
 nym: 'Fi3'
 website: 'https://stratumprotocol.org/'
