--- a/data/projects/thunderhub.mdx
+++ b/data/projects/thunderhub.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'ThunderHub'
+dateAdded: '2022-04-02'
 summary: 'Monitor and manage your node from any browser and any device.'
 nym: 'Anthony Potdevin'
 website: 'https://thunderhub.io/'
