--- a/data/projects/rgb.mdx
+++ b/data/projects/rgb.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'RGB'
+dateAdded: '2023-01-19'
 summary: 'RGB is a system of private & scalable client-validated smart contracts on Bitcoin & Lightning Network.'
 nym: 'LNP/BP Standards Association'
 website: 'https://www.rgbfaq.com/'
