--- a/data/projects/seedsigner.mdx
+++ b/data/projects/seedsigner.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'SeedSigner'
+dateAdded: '2022-12-29'
 summary: 'The goal of SeedSigner is to lower the cost and complexity of Bitcoin multi-signature wallet use. To accomplish this goal, SeedSigner offers anyone the opportunity to build a verifiably air-gapped, stateless Bitcoin signing device using inexpensive, publicly available hardware components (usually < $50).'
 nym: 'SeedSigner'
 website: 'https://seedsigner.com/'
