--- a/data/projects/summerofbitcoin.mdx
+++ b/data/projects/summerofbitcoin.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Summer of Bitcoin'
+dateAdded: '2023-04-20'
 summary: 'Summer of Bitcoin is a global summer internship program focused on introducing university students to bitcoin open-source development and design. Till date, Summer of Bitcoin has funded 124 students from 15 countries to contribute to over 29 open-source bitcoin projects.'
 nym: 'Adi Shankara'
 website: 'https://www.summerofbitcoin.org/'
