Add missing frontmatter

--- a/data/projects/sapio.mdx
+++ b/data/projects/sapio.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Sapio'
+dateAdded: '2022-04-02'
 summary: 'Sapio is a tool for defining such smart contracts in an easy way and exporting easy to integrate APIs for managing open contracts.'
 nym: 'Jeremy Rubin'
 website: 'https://judica.org'
