--- a/data/projects/sparrow_wallet.mdx
+++ b/data/projects/sparrow_wallet.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Sparrow Wallet'
+dateAdded: '2022-04-02'
 summary: 'Sparrow Wallet is a Bitcoin only desktop wallet with a focus on security, privacy and usability. Suitable for beginner to advanced users, Sparrow reveals detailed information about a wallet’s configuration, transactions and UTXOs in order to minimise trust and be fully transparent.'
 nym: 'Craig Raw'
 website: 'https://sparrowwallet.com'
