--- a/data/projects/bitcoiner_guide.mdx
+++ b/data/projects/bitcoiner_guide.mdx
@@ -8,6 +8,8 @@ coverImage: '/static/images/projects/bitcoiner_guide.png'
 git: 'https://github.com/BitcoinQ_A'
 twitter: BitcoinQ_A
 zaprite: 'MlJLIBXa2z2zeti8yXos'
+btcpay: 'bitcoiner_guid'
+tags: ['Bitcoin', 'Education', 'Privacy', 'Lightning']
 ---
 
 ## About this project
