Fix `btcpay` field of Cashu

--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/cashu.jpeg'
 git: 'https://github.com/cashubtc'
 twitter: 'CashuBTC'
 zaprite: '4GbA2gJpvuIM5IPuxTdr'
-btcpay: 'btcpayserver'
+btcpay: 'cashu'
 tags: ['Bitcoin', 'Lightning', 'ecash']
 ---
 
