Fix frontmatter order

--- a/data/projects/bitcoiner_guide.mdx
+++ b/data/projects/bitcoiner_guide.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/bitcoiner_guide.png'
 git: 'https://github.com/BitcoinQ_A'
 twitter: BitcoinQ_A
 zaprite: 'MlJLIBXa2z2zeti8yXos'
-btcpay: 'bitcoiner_guid'
+btcpay: 'bitcoiner_guide'
 tags: ['Bitcoin', 'Education', 'Privacy', 'Lightning']
 ---
 
