--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/tor.svg'
 git: 'https://gitweb.torproject.org/'
 twitter: 'torproject'
 zaprite: 'ZM5TmZ025mrJI8E1kFS5'
-btcpay: 'ronin_dojo'
+btcpay: 'tor'
 tags: ['Privacy', 'Protocol']
 ---
 
