Use ContentLayer for project listings (#121)
* Add projects contentlayer type

* Create splicing.md

* Export projects as documentType

* .md => .mdx

* Add missing fields

* ContentLayer /projects slug

* Rename old slug to .bak

* Introduce ProjectLayout

* Add Zeus

* Fix added date

* Rename to old-slug.tsx

* Add `bonusUSD` to contentLayer project

* Fetch donations in project slug

* Adjust PaymentModal to ContentLayer project type

* Add tags

* Move `dateAdded` up

* Add Cashu as mdx

* Remove unused imports and header

* Remove unused imports

* Remove `ProjectItem` type

* Refactor to use ContentLayer Project

* Refactor to use ContentLayer Project

* Fix prettier problems

* Remove unused imports

* Delete old-slug.tsx

* Add General Fund as mdx

* Load General Fund from ContentLayer

* Fix `btcpay_id` of General Fund

* Move all projects to ContentLayer

*.md -> *.mdx

* Add missing frontmatter to BDK

* Add missing frontmatter for BPI

* Load Operations Budget from ContentLayer

* Add missing frontmatter to Operations Budget

* Import types only

* Remove `type` from ContentLayer projects

* Switch project index to ContentLayer

* Add missing frontmatter to nostr fund

* Remove obsolete projects

* Fix `btcpay_id`

* Add missing frontmatter to Bitcoin Design

* Rename to BPI

* Remove dead projects

* Add `btcpay` param and `tags`

Fixes #102

* Add `dateAdded` to frontmatter

* Add missing frontmatter

* Delete deprecated `operations_budget` project

* Fix field order

* Fix `btcpay` field of Cashu

* Use ContentLayer in BTCPay API

* Use `btcpay` instead of slug for lookup

* Fix frontmatter order

* Delete markdown helper

* Delete `/projects` API endpoint

* Remove unused param

--- a/data/projects/bitcoindesign.mdx
+++ b/data/projects/bitcoindesign.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Bitcoin Design Community'
+dateAdded: '2023-03-10'
 summary: 'A free, open-source community resource for designers, developers, and others working on non-custodial Bitcoin products.'
 nym: 'Christoph Ono'
 website: 'https://bitcoin.design/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/bitcoindesign.png'
 git: 'https://github.com/BitcoinDesign'
 twitter: 'bitcoin_design'
 personalTwitter: 'GBKS'
-type: 'Other Free and Open-Source Project'
 zaprite: 'n5NcVW1WcqvS8oI4UFMI'
+btcpay: 'bitcoindesign'
+tags: ['OpenSats', 'Fund']
 ---
 
 ## About this project
