--- a/data/projects/bpi.mdx
+++ b/data/projects/bpi.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Bitcoin Policy Institute'
+dateAdded: '2022-09-22'
 summary: 'Bitcoin Policy Institute supports academic research on Bitcoin and conducts advocacy in Washington D.C.'
 nym: 'Grant McCarty'
 website: 'https://www.btcpolicy.org/'
@@ -7,9 +8,10 @@ coverImage: '/img/project/bpi.png'
 git: 'https://github.com/BitcoinPolicyInstitute'
 twitter: 'btcpolicyorg'
 personalTwitter: 'grant_mccarty'
-type: 'Other Free and Open-Source Project'
-zaprite: 'hNeX1BwyjpTXi6jQ2CQm'
 bonusUSD: 250000
+zaprite: 'hNeX1BwyjpTXi6jQ2CQm'
+btcpay: 'bitcoin_policy_institute'
+tags: ['Bitcoin', 'Politics']
 ---
 
 ## About this project
