--- a/data/projects/general_fund.mdx
+++ b/data/projects/general_fund.mdx
@@ -1,14 +1,17 @@
 ---
 title: 'General Fund'
+dateAdded: '2023-02-20'
 summary: 'We help you find and support open-source Bitcoin projects - helping create a better tomorrow, today.'
 nym: 'OpenSats'
 website: 'https://opensats.org'
 coverImage: '/static/images/projects/opensats_logo.png'
 git: 'opensats'
 twitter: 'opensats'
-zaprite: '32WbND8heqmY5wYYnIpa'
 hidden: false
 bonusUSD: 4670000
+zaprite: '32WbND8heqmY5wYYnIpa'
+btcpay: 'general_fund'
+tags: ['OpenSats', 'Fund']
 ---
 
 The OpenSats General Fund is a pool of money that is used to support
