--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'GrapheneOS'
+dateAdded: '2022-12-24'
 summary: 'GrapheneOS is a private and secure mobile operating system with great functionality and usability. It has near full Android app compatibility via our sandboxed Google Play compatibility layer.'
 nym: 'GrapheneOS Foundation'
 website: 'https://grapheneos.org/'
 coverImage: '/static/images/projects/graphene.png'
 git: 'https://github.com/GrapheneOS'
 twitter: 'GrapheneOS'
-type: 'Other Free and Open-Source Project'
 zaprite: 'F81LWN96IGmFHnvydSli'
+btcpay: 'grapheneos'
+tags: ['Bitcoin', 'Lightning', 'ecash']
 bonusUSD: 1000000
 ---
 
