--- a/data/projects/nostr.mdx
+++ b/data/projects/nostr.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'The Nostr Fund'
+dateAdded: '2023-05-13'
 summary: 'Funding nostr protocol development and other stuff.'
 nym: 'OpenSats'
 website: 'https://opensats.org'
@@ -7,6 +8,8 @@ coverImage: '/static/images/projects/nostr.png'
 git: 'opensats'
 twitter: 'opensats'
 zaprite: 'OoYtzNjilW1NRtDsxLAj'
+btcpay: 'nostr'
+tags: ['OpenSats', 'Fund']
 bonusUSD: 5000000
 ---
 
