--- a/data/projects/opensats_operations_budget.mdx
+++ b/data/projects/opensats_operations_budget.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'Operations Budget'
+dateAdded: '2022-12-05'
 summary: 'Contributions to the OpenSats Operations Budget will be used to cover our operating expenses as we continue to facilitate frictionless, tax-deductible donations from the community to the Bitcoin & FOSS ecosystems at a pass-through rate of 100%.'
 coverImage: '/static/images/projects/opensats_operations.png'
 nym: 'OpenSats'
 twitter: 'opensats'
 website: 'https://opensats.org/'
 git: 'https://github.com/OpenSats'
-type: 'Internal Operations'
 zaprite: 'lZo1wcsJ0SQb58XfGC4e'
+btcpay: 'opensats_operations_budget'
+tags: ['OpenSats', 'Fund']
 bonusUSD: 330000
 ---
 
