--- a/data/projects/ronin_dojo.mdx
+++ b/data/projects/ronin_dojo.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'RoninDojo'
+dateAdded: '2022-04-02'
 summary: 'We help people have a feature rich bitcoin experience, maintain privacy, and thrive as a sovereign individual.'
 nym: 'BTCxZelko'
 website: 'https://ronindojo.io/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/ronin_dojo.png'
 git: 'https://code.samourai.io/ronindojo/RoninDojo/'
 twitter: 'RoninDojoUI'
 personalTwitter: 'BTCxZelko'
-type: 'Privacy'
 zaprite: 'XuBIEZbPTA9vqClJvDZe'
+btcpay: 'ronin_dojo'
+tags: ['Bitcoin', 'Privacy']
 ---
 
 ## About this project
