--- a/data/projects/sparrow_wallet.mdx
+++ b/data/projects/sparrow_wallet.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Sparrow Wallet'
+dateAdded: '2022-04-02'
 summary: 'Sparrow Wallet is a Bitcoin only desktop wallet with a focus on security, privacy and usability. Suitable for beginner to advanced users, Sparrow reveals detailed information about a wallet’s configuration, transactions and UTXOs in order to minimise trust and be fully transparent.'
 nym: 'Craig Raw'
 website: 'https://sparrowwallet.com'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/sparrow.png'
 git: 'https://github.com/sparrowwallet/sparrow'
 twitter: 'SparrowWallet'
 personalTwitter: 'craigraw'
-type: 'Wallet'
 zaprite: 'WVaur0QAG3nLmI9y6On7'
+btcpay: 'sparrow_wallet'
+tags: ['Bitcoin', 'Wallet']
 ---
 
 ## About this project
