--- a/data/projects/stratumv2.mdx
+++ b/data/projects/stratumv2.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Stratum V2'
+dateAdded: '2023-03-16'
 summary: 'An independent, community run, 100% free and open-source reference implementation of the Stratum V2 protocol.'
 nym: 'Fi3'
 website: 'https://stratumprotocol.org/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/stratumv2.jpg'
 git: 'https://github.com/stratum-mining/stratum'
 twitter: 'StratumV2'
 personalTwitter: 'StratumV2'
-type: 'Other Free and Open-Source Project'
 zaprite: 'G9QKE1Dn6B56uOF8PSYX'
+btcpay: 'stratumv2'
+tags: ['Bitcoin', 'Privacy', 'Protocol', 'Mining']
 ---
 
 ## About this project
