--- a/data/projects/thunderhub.mdx
+++ b/data/projects/thunderhub.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'ThunderHub'
+dateAdded: '2022-04-02'
 summary: 'Monitor and manage your node from any browser and any device.'
 nym: 'Anthony Potdevin'
 website: 'https://thunderhub.io/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/thunderhub.png'
 git: https://github.com/apotdevin/thunderhub
 twitter: 'thunderhubio'
 personalTwitter: 'tonyioi'
-type: 'Lightning'
 zaprite: 'Mnt294LwYGFuWEhYbwVZ'
+btcpay: 'thunderhub'
+tags: ['Bitcoin', 'Lightning', 'Node']
 ---
 
 ## About this project
