--- a/data/projects/bitcoiner_guide.mdx
+++ b/data/projects/bitcoiner_guide.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'Bitcoiner.guide'
+dateAdded: '2022-03-26'
 summary: 'Bitcoiner.Guide is a collection of resources by BitcoinQnA to help people feel more comfortable interacting with bitcoin in a sovereign way.'
 nym: 'Bitcoin QnA'
 website: 'https://bitcoiner.guide/'
 coverImage: '/static/images/projects/bitcoiner_guide.png'
 git: 'https://github.com/BitcoinQ_A'
 twitter: BitcoinQ_A
-type: 'Educator'
 zaprite: 'MlJLIBXa2z2zeti8yXos'
+btcpay: 'bitcoiner_guide'
+tags: ['Bitcoin', 'Education', 'Privacy', 'Lightning']
 ---
 
 ## About this project
