--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'BTCPay Server'
+dateAdded: '2022-09-22'
 summary: 'Free, open-source & self-hosted bitcoin payment gateway that allows self-sovereign individuals and businesses to accept bitcoin payments online or in person without any fees.'
 nym: 'BTCPay Server Foundation'
 website: 'https://btcpayserver.org/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/btcpayserver.png'
 git: 'https://github.com/btcpayserver/btcpayserver'
 twitter: 'BtcpayServer'
 personalTwitter: 'NicolasDorier'
-type: 'Other Free and Open-Source Project'
 zaprite: 'of0LLGHM5cAGu4seVNNN'
+btcpay: 'btcpayserver'
+tags: ['Bitcoin', 'Lightning', 'Wallet', 'Node', 'Commerce', 'Infrastructure']
 ---
 
 ## About this project
