--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'Cashu'
+dateAdded: '2023-04-20'
 summary: 'Cashu is a Chaumian ecash system for Bitcoin.'
 nym: 'Calle'
 website: 'https://cashu.space/'
 coverImage: '/static/images/projects/cashu.jpeg'
 git: 'https://github.com/cashubtc'
 twitter: 'CashuBTC'
-type: 'Other Free and Open-Source Project'
 zaprite: '4GbA2gJpvuIM5IPuxTdr'
+btcpay: 'cashu'
+tags: ['Bitcoin', 'Lightning', 'ecash']
 ---
 
 ## About this project
