--- a/data/projects/rgb.mdx
+++ b/data/projects/rgb.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'RGB'
+dateAdded: '2023-01-19'
 summary: 'RGB is a system of private & scalable client-validated smart contracts on Bitcoin & Lightning Network.'
 nym: 'LNP/BP Standards Association'
 website: 'https://www.rgbfaq.com/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/RGB_Logo.png'
 git: 'https://github.com/rgb-WG/'
 twitter: 'lnp_bp'
 personalTwitter: 'lnp_bp'
-type: 'Other Free and Open-Source Project'
 zaprite: 'eWjJu03VZaAgizLPZJEb'
+btcpay: 'rgb'
+tags: ['Bitcoin', 'Lightning', 'Protocol']
 ---
 
 ## About this project
