--- a/data/projects/seedsigner.mdx
+++ b/data/projects/seedsigner.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'SeedSigner'
+dateAdded: '2022-12-29'
 summary: 'The goal of SeedSigner is to lower the cost and complexity of Bitcoin multi-signature wallet use. To accomplish this goal, SeedSigner offers anyone the opportunity to build a verifiably air-gapped, stateless Bitcoin signing device using inexpensive, publicly available hardware components (usually < $50).'
 nym: 'SeedSigner'
 website: 'https://seedsigner.com/'
 coverImage: '/static/images/projects/seedsigner.jpeg'
 git: 'https://github.com/SeedSigner'
 twitter: 'seedsigner'
-type: 'Wallet'
 zaprite: 'QS8XutI6IdVTnjuYv2GH'
+btcpay: 'seedsigner'
+tags: ['Bitcoin', 'HWW', 'Signing Device']
 ---
 
 ## About this project
