--- a/data/projects/splicing.mdx
+++ b/data/projects/splicing.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Splicing'
+dateAdded: '2023-03-10'
 summary: 'Splicing is the ability to resize Lightning channels on-the-fly, giving users of the Lightning Network many additional benefits that were not intuitively obvious at first.'
 nym: 'Dusty Daemon'
 website: 'https://lightningsplice.com/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/splicing.jpg'
 git: 'https://github.com/lightning/bolts/pull/863'
 twitter: 'dusty_daemon'
 personalTwitter: 'dusty_daemon'
-type: 'Other Free and Open-Source Project'
 zaprite: '2qB3Y3gfSvOnWOv23BZb'
+btcpay: 'dusty'
+tags: ['Lightning', 'Protocol']
 ---
 
 ## About this project
