--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -1,13 +1,15 @@
 ---
 title: 'The Tor Project'
+dateAdded: '2022-12-30'
 summary: 'The Tor Project advances human rights and defends your privacy online through free software and open networks.'
 nym: 'The Tor Project'
 website: 'https://www.torproject.org/'
 coverImage: '/static/images/projects/tor.svg'
 git: 'https://gitweb.torproject.org/'
 twitter: 'torproject'
-type: 'Other Free and Open-Source Project'
 zaprite: 'ZM5TmZ025mrJI8E1kFS5'
+btcpay: 'tor'
+tags: ['Privacy', 'Protocol']
 ---
 
 ## About this project
