--- a/data/projects/zeus.mdx
+++ b/data/projects/zeus.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Zeus'
+dateAdded: '2022-04-02'
 summary: 'Zeus is an open-source, non-custodial Bitcoin wallet that gives you full control over how you make payments.'
 nym: 'Evan Kaloudis'
 website: 'https://zeusln.app/'
@@ -7,8 +8,9 @@ coverImage: '/static/images/projects/zeus.png'
 git: 'https://github.com/ZeusLN/zeus'
 twitter: 'ZeusLN'
 personalTwitter: 'evankaloudis'
-type: 'Wallet'
 zaprite: 'WhOWcKFUiFHFMVqaBhLD'
+btcpay: 'zeus'
+tags: ['Wallet', 'Lightning']
 ---
 
 ## About this project
