First draft of /nostr & design

--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -5,45 +5,51 @@ image: /static/images/projects/nostr.png
 layout: PageLayout
 ---
 
-## Nostr
+Our [mission] is to maintain a sustainable ecosystem of funding for free and
+open-source projects and contributors, especially bitcoin-related projects and
+protocols that help bitcoin flourish. We believe that nostr is such a protocol.
+Like bitcoin, it is an open protocol that has the potential to revolutionize the
+way we think about individual sovereignty and liberty.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper nec
-nisi eu cursus. Morbi sed malesuada erat. Vivamus id dolor velit. In quis ante
-ex. Donec mauris felis, interdum in mattis eget, tincidunt sed tortor. Duis
-dapibus vulputate neque, nec accumsan magna fringilla et. Phasellus interdum
-turpis felis, in viverra erat dignissim quis. Quisque sit amet dignissim tortor.
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-curae;
+To aid the various development efforts that are being made in the nostr
+ecosystem, we created [The Nostr Fund](https://opensats.org/projects/nostr) to
+provide funding for open-source projects. If you would like to join us in
+helping with these efforts, please reach out to us or [donate to the
+fund](https://opensats.org/projects/nostr).
 
-Working on nostr stuff? Don't hesitate to [apply for funding][apply]!
+If you are an open-source developer working on notes and other stuff transmitted
+by relays, don't hesitate to [apply for funding][apply].
 
-## Nostr Design
+# Nostr Design
 
-Morbi quis molestie massa, non porta ex. Cras aliquet leo pretium, dignissim
-augue vitae, rutrum erat. Duis nisl dolor, convallis vestibulum enim non,
-gravida pellentesque augue. Ut nibh augue, pellentesque nec dapibus nec,
-pellentesque et ex. Vivamus vitae metus pulvinar, dictum magna vel, mattis
-massa. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in
-faucibus. Cras vehicula, est et vulputate placerat, augue ipsum ullamcorper
-eros, a congue ante massa at urna. Nulla facilisi. Donec felis odio, condimentum
-nec viverra aliquet, hendrerit blandit nunc. Aliquam eget risus bibendum, tempus
-nisl in, tincidunt enim. Sed vitae dui in est faucibus auctor. Integer metus
-arcu, fermentum a scelerisque in, euismod vel sem. Integer tempus arcu et felis
-egestas, vitae hendrerit elit pulvinar. Phasellus blandit nisl justo, lobortis
-fringilla dui porttitor vel. Nullam nisi nunc, eleifend et urna eget, auctor
-porta velit.
+In addition to providing funding to projects, we offer to help with design work
+if your open-source project needs it.
 
-Donec pretium justo vel dapibus ornare. Vivamus tortor est, interdum sit amet
-facilisis at, condimentum id nibh. Donec felis magna, tempor sit amet varius
-vel, tincidunt eget quam. Vestibulum non velit sit amet felis posuere
-sollicitudin. Nunc vel turpis lacinia, luctus arcu ac, molestie diam. Praesent
-in porta dui. Nullam volutpat quam a congue fermentum. Aliquam sit amet enim
-augue. Integer congue aliquet metus in gravida.
+Part of these efforts is [nostrdesign.org](https://nostrdesign.org/), a
+comprehensive resource offering product design considerations, design
+principles, and best practices that will help developers solve the unique user
+experience challenges that nostr poses.
 
-Need design help? Want to improve the UX of your app? Reach out to
-`design@opensats.org` or to [Karnage] & [Daniele] directly.
+In addition to nostrdesign.org, two of our grantees are dedicating time to help
+projects that need help with design and general UI/UX improvements. The first
+one is `@karnage`, who brings a lot of experience and expertise from the world
+of bitcoin product design. Karnage was involved in the development of multiple
+nostr clients and is the brain behind [Hey Nostr](https://www.heynostr.com/) and
+[nostrapps.com](https://www.nostrapps.com/). The second one is `@dtonon`, who is
+actively involved in the design of major clients, most notably Gossip and
+Coracle, as well as various tools such as the static content gateway that is
+part of
+[nostr.com](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
 
-[Karnage]: https://nostr.com/npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac
-[Daniele]: https://nostr.com/npub10000003zmk89narqpczy4ff6rnuht2wu05na7kpnh3mak7z2tqzsv8vwqk
+## Need Help?
+
+Are you working on an open-source project that needs some design help? Want to
+improve the UX of your app? Reach out to `design@opensats.org` or to [Karnage] &
+[Daniele] directly.
+
+[Karnage]: /about/karnage
+[Daniele]: /about/dtonon
 
 [apply]: /apply
+[mission]: /mission
+[The Nostr Fund]: /projects/nostr
