--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -31,15 +31,21 @@ principles, and best practices that will help developers solve the unique user
 experience challenges that nostr poses.
 
 In addition to nostrdesign.org, two of our grantees are dedicating time to help
-projects that need help with design and general UI/UX improvements. The first
-one is `@karnage`, who brings a lot of experience and expertise from the world
-of bitcoin product design. Karnage was involved in the development of multiple
-nostr clients and is the brain behind [Hey Nostr](https://www.heynostr.com/) and
-[nostrapps.com](https://www.nostrapps.com/). The second one is `@dtonon`, who is
+projects that need help with design and general UI/UX improvements. 
+
+The first one is `@karnage`, who brings a lot of experience and expertise from
+the world of bitcoin product design. Karnage was involved in the development of
+multiple nostr clients and is the brain behind *Hey Nostr*[^fn-hey] and
+*Nostr Apps*.[^fn-apps]
+
+The second one is `@dtonon`, who is
 actively involved in the design of major clients, most notably Gossip and
 Coracle, as well as various tools such as the static content gateway that is
-part of
-[nostr.com](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
+part of *nostr.com*.[^fn-nostr-com]
+
+[^fn-hey]: [heynostr.com](https://www.heynostr.com/)
+[^fn-apps]: [nostrapps.com](https://www.nostrapps.com/)
+[^fn-nostr-com]: [nostr.com/npub10pensat...](https://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f)
 
 ## Need Help?
 
