--- a/data/authors/karnage.mdx
+++ b/data/authors/karnage.mdx
@@ -2,11 +2,15 @@
 name: Karnage
 nym: karnagebitcoin
 avatar: /static/images/design/karnage.jpg
-occupation: TODO
+occupation: Designer
 company: OpenSats
 nostr: npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac
 github: https://github.com/karnagebitcoin
 design: true
 ---
 
-TODO
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi blandit odio lacinia, viverra quam eget, dapibus nibh. Donec nec placerat ligula. Ut venenatis tincidunt ante. Suspendisse consectetur lobortis sodales. Mauris dignissim nulla ipsum, in condimentum ligula lobortis sed. In vehicula nisi eu felis pellentesque pharetra. Sed semper tortor sed metus accumsan, et efficitur justo finibus. Proin ullamcorper augue in sem efficitur eleifend. Duis vitae arcu sit amet orci mattis feugiat nec in nisi. Donec a dolor gravida arcu commodo dapibus. Phasellus ac sapien vitae ligula laoreet molestie. Aenean nunc tortor, hendrerit in dolor nec, dapibus consectetur sapien. Vivamus ut felis ut augue sagittis ultrices.
+
+Mauris ac fringilla metus. Nulla venenatis iaculis purus et euismod. Nunc placerat ante purus, sed luctus eros consequat sit amet. Vivamus aliquam interdum tortor. Sed ut nisl sollicitudin, feugiat turpis at, tincidunt erat. Suspendisse euismod scelerisque dignissim. Vestibulum sagittis sollicitudin eleifend. Morbi vestibulum efficitur orci ac volutpat.
+
+Donec lectus ligula, euismod quis lacinia quis, fermentum eu nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent a libero vel nibh auctor vehicula at in mi. Vivamus convallis mauris sit amet volutpat laoreet. Morbi gravida vitae dolor eget tempus. Curabitur lacinia arcu vitae diam eleifend, ornare ornare tortor mattis. In tempus turpis varius eros malesuada, vitae malesuada odio dignissim. Quisque mattis rutrum nibh a posuere. Donec tristique augue velit, et finibus quam sollicitudin eu. Maecenas pulvinar convallis condimentum. Nunc quis lobortis mauris, quis placerat mi. Vivamus sed varius tellus. Donec est risus, venenatis vitae quam porta, facilisis bibendum purus. Donec commodo, ipsum nec rutrum ultricies, sem mauris luctus justo, blandit lobortis felis mi at velit. Integer quis nunc eu felis laoreet placerat.
