Add links to PDFs

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -26,7 +26,7 @@ tempor volutpat mi. Donec tempor egestas placerat.
 ## OpenSats Foundation
 
 - [Our Mission](/mission)
-- [Executed By-Laws](/docs/bylaws.pdf)
+- [Executed By-Laws][ebl]
 - [Board of Directors](/about#board-of-directors)
 
 ## Grants & Research
@@ -35,8 +35,15 @@ tempor volutpat mi. Donec tempor egestas placerat.
 
 ## Ethics & Compliance
 
-- Code of Ethics
-- Conflict of Interest
-- Tax Policy
-- EEO & Non-Discrimination Policy
-- Whistleblower Protection Policy
+- [Code of Ethics][coe]
+- [Conflict of Interest][coi]
+- [Tax Policy][tax]
+- [EEO & Non-Discrimination Policy][eeo]
+- [Whistleblower Protection Policy][wpp]
+
+[ebl]: /docs/bylaws.pdf
+[coe]: /docs/ethics.pdf
+[coi]: /docs/conflict.pdf
+[tax]: /docs/tax.pdf
+[eeo]: /docs/eeo.pdf
+[wpp]: /docs/whistle.pdf
