Add Record Retention Policy

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -29,6 +29,8 @@ tempor volutpat mi. Donec tempor egestas placerat.
 - [Executed By-Laws][ebl]
 - [Board of Directors](/about#board-of-directors)
 
+[ebl]: /docs/bylaws.pdf
+
 ## Grants & Research
 
 - [Grant Selection Process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md)
@@ -37,11 +39,12 @@ tempor volutpat mi. Donec tempor egestas placerat.
 
 - [Conflict of Interest][coi]
 - [Tax Policy][tax]
+- [Record Retention Policy][rrp]
 - [EEO & Non-Discrimination Policy][eeo]
 - [Whistleblower Protection Policy][wpp]
 
-[ebl]: /docs/bylaws.pdf
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
+[rrp]: /docs/rrp.pdf
 [eeo]: /docs/eeo.pdf
 [wpp]: /docs/whistle.pdf
