Add `/transparency` text
Get rid of lorem ipsum...

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -5,23 +5,17 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non est ac
-tellus bibendum imperdiet sit amet id mi. Mauris non volutpat dui, in suscipit
-orci. Etiam et rhoncus lectus. Nulla odio quam, sodales sed lacinia nec,
-condimentum non mauris. Aliquam sed orci facilisis, malesuada enim in, euismod
-tortor. Aliquam in lectus ac est volutpat fermentum. Donec est diam, sagittis at
-laoreet non, congue vitae nisl. Sed odio ante, interdum sed faucibus vel,
-sodales eu lectus. Etiam dignissim sollicitudin mauris, congue ultrices augue
-tempor eu. Sed rutrum orci ligula, ut laoreet risus elementum eu. Praesent
-interdum in odio vel ultrices. Praesent nisi sapien, mollis at tincidunt
-aliquam, porta in ligula.
+As a 501(c)(3) public charity, OpenSats is committed to upholding high
+transparency, integrity, and legal compliance standards. As an organization that
+is embedded in the free and open-source movement, we cherish the principles of
+transparency, openness, as well as conversing and working in public.
 
-Ut iaculis justo ullamcorper odio auctor, sed luctus quam pharetra. Integer
-porttitor ipsum in orci ullamcorper rhoncus. Praesent luctus, enim a auctor
-suscipit, mauris metus congue arcu, ac sollicitudin mauris libero feugiat nunc.
-Phasellus ac lorem cursus, venenatis lectus sit amet, ornare nisi. Pellentesque
-mattis imperdiet malesuada. Duis at nunc nunc. Morbi ac ipsum turpis. Duis
-tempor volutpat mi. Donec tempor egestas placerat.
+By adhering to these principles, we aim to demonstrate our commitment to
+responsible sat management, good corporate citizenship, and the long-term
+sustainability of our organization.
+
+These principles are reflected in our transparency and policy documents, as well
+as in the internal and external processes of our organization.
 
 ## OpenSats Foundation
 
