--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -11,7 +11,7 @@ is embedded in the free and open-source movement, we cherish the principles of
 transparency, openness, as well as conversing and working in public.
 
 By adhering to these principles, we aim to demonstrate our commitment to
-responsible sat management, good corporate citizenship, and the long-term
+responsible bitcoin treasury management, good corporate citizenship, and the long-term
 sustainability of our organization.
 
 These principles are reflected in our transparency and policy documents, as well
