Update dtonon profile

--- a/data/authors/dtonon.mdx
+++ b/data/authors/dtonon.mdx
@@ -2,15 +2,42 @@
 name: Daniele Tonon
 nym: dtonon
 avatar: /static/images/design/dtonon.jpg
-occupation: Usability & Sustainability
+occupation: Product designer, Developer
 company: OpenSats
 nostr: npub10000003zmk89narqpczy4ff6rnuht2wu05na7kpnh3mak7z2tqzsv8vwqk
 github: https://github.com/dtonon
 design: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi blandit odio lacinia, viverra quam eget, dapibus nibh. Donec nec placerat ligula. Ut venenatis tincidunt ante. Suspendisse consectetur lobortis sodales. Mauris dignissim nulla ipsum, in condimentum ligula lobortis sed. In vehicula nisi eu felis pellentesque pharetra. Sed semper tortor sed metus accumsan, et efficitur justo finibus. Proin ullamcorper augue in sem efficitur eleifend. Duis vitae arcu sit amet orci mattis feugiat nec in nisi. Donec a dolor gravida arcu commodo dapibus. Phasellus ac sapien vitae ligula laoreet molestie. Aenean nunc tortor, hendrerit in dolor nec, dapibus consectetur sapien. Vivamus ut felis ut augue sagittis ultrices.
+Daniele is an entrepreneur who grew up in the web space starting in the late 90s, developing e-commerce platforms, online services and management software with the goal of bringing value to businesses and improving the final users' experience with helpful and pleasant tools.
 
-Mauris ac fringilla metus. Nulla venenatis iaculis purus et euismod. Nunc placerat ante purus, sed luctus eros consequat sit amet. Vivamus aliquam interdum tortor. Sed ut nisl sollicitudin, feugiat turpis at, tincidunt erat. Suspendisse euismod scelerisque dignissim. Vestibulum sagittis sollicitudin eleifend. Morbi vestibulum efficitur orci ac volutpat.
+From mid-2022 on, he is following Nostr's development, where he is actively involved in the design of major clients, most notably Gossip and Coracle, as well as various tools such as the Njump static content gateway that is part of *nostr.com*.
 
-Donec lectus ligula, euismod quis lacinia quis, fermentum eu nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent a libero vel nibh auctor vehicula at in mi. Vivamus convallis mauris sit amet volutpat laoreet. Morbi gravida vitae dolor eget tempus. Curabitur lacinia arcu vitae diam eleifend, ornare ornare tortor mattis. In tempus turpis varius eros malesuada, vitae malesuada odio dignissim. Quisque mattis rutrum nibh a posuere. Donec tristique augue velit, et finibus quam sollicitudin eu. Maecenas pulvinar convallis condimentum. Nunc quis lobortis mauris, quis placerat mi. Vivamus sed varius tellus. Donec est risus, venenatis vitae quam porta, facilisis bibendum purus. Donec commodo, ipsum nec rutrum ultricies, sem mauris luctus justo, blandit lobortis felis mi at velit. Integer quis nunc eu felis laoreet placerat.
+He is passionate about design, user experience and software development, he puts accessibility, sustainability and privacy as the core values of his activities.
+
+### PGP Key
+
+Fingerprint: `0260 7FAA C394 45E1 FC6E  47F5 6954 79D9 745E CA51`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mDMEZMfMuRYJKwYBBAHaRw8BAQdATVVfC1nE9AwiC5saC6ulkvxA6Ti76qp97ECR
+FCCTPSW0IURhbmllbGUgVG9ub24gPHRvbm9uQHZpdGFtaW5vLml0PoiZBBMWCgBB
+FiEEAmB/qsOUReH8bkf1aVR52XReylEFAmTHzLkCGwMFCQHhM4AFCwkIBwICIgIG
+FQoJCAsCBBYCAwECHgcCF4AACgkQaVR52XReylFuZAD/Tv+5lCOzUvVTwXzP2z0g
+XwTiG+4uKu1G5eDbj5ZLSfsBAO34XD4DeBdbICfeip4lZQWxkVIDtYGzh1YnrCiB
+wxcIuDgEZMfMuRIKKwYBBAGXVQEFAQEHQHOriD0rdoHt0ErdudiTAkx/GHxdbD4M
+a3Tgk/cNEUk5AwEIB4h+BBgWCgAmFiEEAmB/qsOUReH8bkf1aVR52XReylEFAmTH
+zLkCGwwFCQHhM4AACgkQaVR52XReylGMzwEAwg1w2QhMqmNj1jYe6oYR5lGzTYYC
+31pvCbLMR0gbTacA/A+IZKvy4p5GXjyHFsH32EXiyVYFcWOgCP3d3Y0URKoJuDME
+ZMfPexYJKwYBBAHaRw8BAQdA6YQ73enJrNHSgI9DrU5uL9WJymvByjJe8nQ/OMfO
+8R6I9QQYFgoAJhYhBAJgf6rDlEXh/G5H9WlUedl0XspRBQJkx897AhsCBQkB4TOA
+AIEJEGlUedl0XspRdiAEGRYKAB0WIQRxZu12wGPyhgQLOZXaSA0/h9gfswUCZMfP
+ewAKCRDaSA0/h9gfs7gmAQCgM/ifO4Z/HNXk+owo8E9HN2KesuT8PczOL4378Esz
+HgEAuduZsRv1iELr2gw782pH2eup/tI4c9DJDNreJ1MO3gdiaQD+LNq37yudymca
+067jGallUVl0dF/YaBQUwAJ/d6xVSVoA/2UuiJ11M19JN8fw5I2PfMxFDjQpRds9
+8b/z21Kq8xQE
+=rjoL
+-----END PGP PUBLIC KEY BLOCK-----
+```
