--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -32,7 +32,7 @@ increasingly bitcoinized world.
 
 ### PGP Key
 
-Fingerprint: `89C4 A25E 69A5 DE7F`
+Fingerprint: `8198 A185 30A5 22A0 9561 2439 89C4 A25E 69A5 DE7F`
 
 ```
 -----BEGIN PGP PUBLIC KEY BLOCK-----
