Small fixes to Gigi's bio (#124)

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -16,11 +16,12 @@ lessons learned from falling down the Bitcoin rabbit hole. His current
 work-in-progress book, [21 Ways](https://21-ways.com/), tries to illuminate
 Bitcoin from multiple angles, using metaphors from biology, physics,
 engineering, and other disciplines. He is the creator and maintainer
-of [bitcoin-resources.com](https://bitcoin-resources.com/), a comprehensive list
-of curated books, articles, podcasts, and other resources that help to provide a
-multi-faceted understanding of Bitcoin. In 2019 he launched the German-speaking
-Bitcoin podcast \"[Einundzwanzig](https://einundzwanzig.space/)\" with one of
-his co-hosts which turned into a community movement that now spans [multiple
+of [bitcoin-resources.com](https://bitcoin-resources.com/) and
+[nostr-resources.com](https://nostr-resources.com/), a comprehensive list of
+educational resources around bitcoin and nostr, respectively. In 2019 he
+launched the German-speaking Bitcoin podcast
+\"[Einundzwanzig](https://einundzwanzig.space/)\" with one of his co-hosts which
+turned into a community movement that now spans [multiple
 countries](https://twentyone.world/). He is passionate about privacy, human
 rights, and freedom technology. As the head of strategy and operations at
 OpenSats, he spends most of his day thinking about how to best support the
@@ -31,7 +32,7 @@ increasingly bitcoinized world.
 
 ### PGP Key
 
-Fingerprint: `89C4 A25E 69A5 DE7F`
+Fingerprint: `8198 A185 30A5 22A0 9561 2439 89C4 A25E 69A5 DE7F`
 
 ```
 -----BEGIN PGP PUBLIC KEY BLOCK-----
