Add footnote link for supported devices

--- a/data/projects/grapheneos.mdx
+++ b/data/projects/grapheneos.mdx
@@ -37,4 +37,6 @@ Other valuable features include:
 - Privacy by default
 - Longer passwords
 
-The operating system is easy to install on most modern Pixel devices.
+The operating system is easy to install on most modern Pixel devices.[^fn-supported-devices]
+
+[^fn-supported-devices]: https://grapheneos.org/faq#supported-devices
